[gd_scene load_steps=3 format=3 uid="uid://d4jglnhn6kcqo"]

[ext_resource type="Script" path="res://scripts/screens/home_screen.gd" id="1_xdpgw"]
[ext_resource type="Texture2D" uid="uid://cie3icaxwuaj6" path="res://assets/placeholders/eloicon.png" id="2_yh5oe"]

[node name="HomeScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdpgw")

[node name="VerticalLayout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Infos" type="PanelContainer" parent="VerticalLayout"]
layout_mode = 2

[node name="InfosLayout" type="VBoxContainer" parent="VerticalLayout/Infos"]
layout_mode = 2

[node name="FirstRow" type="HBoxContainer" parent="VerticalLayout/Infos/InfosLayout"]
layout_mode = 2
alignment = 1

[node name="DisplayName" type="Label" parent="VerticalLayout/Infos/InfosLayout/FirstRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "???"

[node name="EloPic" type="TextureRect" parent="VerticalLayout/Infos/InfosLayout/FirstRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_yh5oe")
expand_mode = 2
stretch_mode = 6

[node name="SecondRow" type="HBoxContainer" parent="VerticalLayout/Infos/InfosLayout"]
layout_mode = 2
alignment = 1

[node name="Gold" type="Label" parent="VerticalLayout/Infos/InfosLayout/SecondRow"]
unique_name_in_owner = true
layout_mode = 2
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crystals" type="Label" parent="VerticalLayout/Infos/InfosLayout/SecondRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Platinum" type="Label" parent="VerticalLayout/Infos/InfosLayout/SecondRow"]
unique_name_in_owner = true
layout_mode = 2
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeckArea" type="PanelContainer" parent="VerticalLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeckAreaLayout" type="VBoxContainer" parent="VerticalLayout/DeckArea"]
layout_mode = 2

[node name="FirstRow" type="HBoxContainer" parent="VerticalLayout/DeckArea/DeckAreaLayout"]
layout_mode = 2

[node name="SecondRow" type="HBoxContainer" parent="VerticalLayout/DeckArea/DeckAreaLayout"]
layout_mode = 2

[node name="PlayArea" type="PanelContainer" parent="VerticalLayout"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VerticalLayout/PlayArea"]
layout_mode = 2
text = "PLAY"

[connection signal="pressed" from="VerticalLayout/PlayArea/PlayButton" to="." method="_on_play_button_pressed"]
